Aligning news module spacing fix

--- a/wordpress/wp-content/themes/kbharkiv/resources/assets/styles/modules/module-news.scss
+++ b/wordpress/wp-content/themes/kbharkiv/resources/assets/styles/modules/module-news.scss
@@ -15,8 +15,16 @@
     }
   }
 
+  //first
   .news a:first-child article {
     @include media-breakpoint-up(md) {
+      padding-top: 0;
+    }
+  }
+
+  // first two
+  .news a:nth-child(-n+2) article {
+    @include media-breakpoint-up(lg) {
       padding-top: 0;
     }
   }
